--- a/conference-ticket-generator/src/styles/style.scss
+++ b/conference-ticket-generator/src/styles/style.scss
@@ -1,2 +1,5 @@
 @import '~normalize.css';
-@import 'fonts'; 
+@import './abstracts/fonts';
+@import './abstracts/variables';
+@import './components/input';
+@import './components/button'
