--- a/conference-ticket-generator/src/styles/style.scss
+++ b/conference-ticket-generator/src/styles/style.scss
@@ -2,4 +2,5 @@
 @import './abstracts/fonts';
 @import './abstracts/variables';
 @import './components/input';
-@import './components/button'
+@import './components/button';
+@import './components/background';
