--- a/conference-ticket-generator/src/styles/components/_input.scss
+++ b/conference-ticket-generator/src/styles/components/_input.scss
@@ -8,6 +8,7 @@ input[type="text"] {
   padding: 0px $spacing-200;
   border-radius: $radius-12;
   border: 1px solid $neutral-500;
+  transition: 0.4s ease-out;
   background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(2.5px);
   color: $neutral-0;
