feat: add styles for form

--- a/conference-ticket-generator/src/styles/components/_input.scss
+++ b/conference-ticket-generator/src/styles/components/_input.scss
@@ -4,6 +4,8 @@ input[type="text"] {
     color: $neutral-300;
   }
 
+  margin-top: $spacing-150;
+
   height: 54px;
   padding: 0px $spacing-200;
   border-radius: $radius-12;
