--- a/conference-ticket-generator/src/styles/style.scss
+++ b/conference-ticket-generator/src/styles/style.scss
@@ -5,7 +5,14 @@
 @import './components/button';
 @import './components/background';
 @import './components/typography';
+@import './components/forms';
 
 input[type="file"] {
   display: none;
+}
+
+main {
+  display: grid;
+  place-items: center;
+
 }
