--- a/conference-ticket-generator/src/styles/abstracts/_variables.scss
+++ b/conference-ticket-generator/src/styles/abstracts/_variables.scss
@@ -27,6 +27,7 @@ $line-height-120: 120%;
 
 $letter-spacing-minus-1: -1px;
 $letter-spacing-minus-0-5: -0.5px;
+$letter-spacing-minus-0-2: -0.2px;
 $letter-spacing-minus-0-3: -0.3px;
 $letter-spacing-0: 0;
 
