--- a/conference-ticket-generator/src/styles/components/_typography.scss
+++ b/conference-ticket-generator/src/styles/components/_typography.scss
@@ -23,3 +23,19 @@ label {
   line-height: $line-height-120;
   letter-spacing: $letter-spacing-minus-0-5;
 }
+
+.instruction-text {
+  color: $neutral-300;
+  text-align: center;
+  font-family: Inconsolata-Regular;
+  font-size: 18px;
+  line-height: $line-height-120;
+}
+
+.hint-text {
+  color: $neutral-300;
+  font-family: Inconsolata-Regular;
+  font-size: $font-size-12;
+  line-height: $line-height-120;
+  letter-spacing: $letter-spacing-minus-0-2;
+}
