feat: complete basic styling for form

--- a/conference-ticket-generator/src/styles/abstracts/_variables.scss
+++ b/conference-ticket-generator/src/styles/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $font-family-primary: 'Inconsolata', sans-serif;
 
 $font-size-60: 60px; // ExtraBold
 $font-size-40: 40px; // Bold
+$font-size-30: 30px;
 $font-size-24: 24px; // Bold
 $font-size-22: 22px; // Bold (mobile)
 $font-size-20: 20px; // Medium
