--- a/conference-ticket-generator/src/styles/components/_typography.scss
+++ b/conference-ticket-generator/src/styles/components/_typography.scss
@@ -5,15 +5,33 @@
   font-size: $font-size-60;
   line-height: $line-height-110;
   letter-spacing: $letter-spacing-minus-1;
+  max-width: 890px;
+  margin: 0 0 $spacing-250 0;
+  @media(max-width: 768px) {
+    max-width: 705px;
+  }
+  @media(max-width: 700px) {
+    font-size: $font-size-30;
+  }
+  @media(max-width: 375px) {
+    max-width: 343px;
+  }
 }
 
 .sub-heading {
+  margin: 0 0 45px 0;
   color: $neutral-300;
   text-align: center;
   font-family: Inconsolata-Medium;
   font-size: $font-size-24;
   line-height: $line-height-120;
   letter-spacing: $letter-spacing-minus-0-5;
+
+  @media(max-width: 375px) {
+    margin: 0 0 40px 0;
+    font-size: $font-size-20;
+    max-width: 343px;
+  }
 }
 
 label {
@@ -25,6 +43,7 @@ label {
 }
 
 .instruction-text {
+  margin: 0;
   color: $neutral-300;
   text-align: center;
   font-family: Inconsolata-Regular;
@@ -38,4 +57,8 @@ label {
   font-size: $font-size-12;
   line-height: $line-height-120;
   letter-spacing: $letter-spacing-minus-0-2;
+  display: flex;
+  align-items: center;
+  gap: $spacing-100;
+  margin: 0;
 }
