--- a/conference-ticket-generator/src/styles/components/_input.scss
+++ b/conference-ticket-generator/src/styles/components/_input.scss
@@ -1,4 +1,5 @@
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
   
   &::placeholder {
     color: $neutral-300;
@@ -27,8 +28,27 @@ input[type="text"] {
     box-shadow: 0px 0px 0px 3px $neutral-900, 0px 0px 0px 5px $neutral-500;
   }
 
-  &.error {
+  &:invalid {
     border: 1px solid $orange-500;
+
+    & + .hint {
+      display: flex;
+
+      .hint-text {
+        color: $orange-500;
+      }
+
+      .hint-icon {
+        .circle,
+        .line-path {
+          stroke: $orange-500;
+        }
+        
+        .fill-path {
+          fill: $orange-500;
+        }
+      }
+    }
   }
 }
 
