feat: add uploading image by drag and drop

--- a/conference-ticket-generator/src/styles/components/_field.scss
+++ b/conference-ticket-generator/src/styles/components/_field.scss
@@ -13,10 +13,12 @@
   background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(2.5px);
   transition: .2s ease-out;
+  &.hover,
   &:hover {
     background: rgba(255, 255, 255, 0.20);
   }
   
+  &.hover,
   &:hover .upload-icon-container {
     border: 1px solid $neutral-500;
   }
