feat: add favicon

--- a/conference-ticket-generator/src/styles/style.scss
+++ b/conference-ticket-generator/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import '~normalize.css';
+@import 'normalize.css';
 @import './abstracts/fonts';
 @import './abstracts/variables';
 @import './components/input';
